# SC-17

./: README.md  install.sh
E2E/: BME280.cpp  BNO055.h  CMakeLists.txt  E2E.cpp  GT_902PMGG_irq.cpp  GT_902PMGG_irq.hpp  SendCoordinate.h  hw_config.c  microSD.hpp  motor_dual.hpp
FM/: BME280.cpp  CMakeLists.txt  E2E.cpp  motor_dual.hpp
Motor/: test.c  test.uf2  test_dual.c
code/: CMakeLists.txt  Ultrasonic.c
drop_test/: BNO055.hpp  CMakeLists.txt  README.md  a.out  bme280.cpp  bme280.hpp  drop_test.cpp  microSD.hpp
testCode/: testCode.txt
testCode/BME280/: CMakeLists.txt  README.MD  bme280.cpp  example.cpp
testCode/BNO055/: CMakeLists.txt
testCode/BNO055/BNO055/: TempSense.c
testCode/BNO055_2/: BNO055.c  BNO055_gyro.h  CMakeLists.txt
testCode/GPS/: CMakeLists.txt  GT_902PMGG_irq.cpp  GT_902PMGG_irq.hpp  README.md  example.cpp
testCode/GPS_blocking/: CMakeLists.txt  GT_902PMGG_blocking.cpp  GT_902PMGG_blocking.hpp  README.md  example.cpp
testCode/Motor/: CMakeLists.txt  test.c  test_dual.hpp  test_dual.uf2
testCode/SDCard/simple_example/: hw_config.c  microSD.hpp
testCode/Socket/: README.md  README.txt  client.py  client_set.py  server  server.c  server.cpp  server_set.py
testCode/Socket/Success/: client  client.cpp  client.hpp  main.cpp  server.py
testCode/Ultrasonic/code/: CMakeLists.txt  Ultrasonic.c
testCode/pico_Uart_detective/: CMakeLists.txt
testCode/pico_Uart_detective/code/: CMakeLists.txt  pico_uart_detective.c
